--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     </head>
     <body>
         <div class="header">
-            School Box
+            School Bucket
         </div>
         <div class="wrapper">
             <div class="grid-child"></div>
-            <div class="column-title grid-child">Zoom Link <br>Storage</div c>
-            <div class="column-title grid-child">Syllabi <br>Storage</div>
+            <div class="column-title grid-child">Zoom Link</div c>
+            <div class="column-title grid-child">Syllabi<Storage</div>
             <div class="grid-child"></div>
             <div class="grid-child"></div>
             <div></div>
