--- a/index.html
+++ b/index.html
@@ -6,14 +6,24 @@
     <body>
         <div class="header">
             School Bucket
-        </div>
-        <div class="wrapper">
-            <div class="grid-child"></div>
-            <div class="column-title grid-child">Zoom Link</div c>
-            <div class="column-title grid-child">Syllabi<Storage</div>
-            <div class="grid-child"></div>
-            <div class="grid-child"></div>
-            <div></div>
+<html>
+<head>
+<style>
+p {
+  color: blue;
+  text-align: center;
+} 
+</style>
+</head>
+<body>
+
+<p>Zoom Link</p>
+<p>Syllabi</p>
+<p>Calendar</p>
+
+</body>
+</html>
+
         </div>
     </body>
 </html>
